Bug 166620 - No Gap between note number and endnote text when exporting to DOC/DOCX/RTF
Summary: No Gap between note number and endnote text when exporting to DOC/DOCX/RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2025-05-18 08:30 UTC by Telesto
Modified: 2025-05-18 15:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-05-18 08:30:37 UTC
Description:
No Gap between note number and endnote text when exporting to DOC/DOCX/RTF

Steps to Reproduce:
1. New File
2. Type any text
3. Insert an endnote
4. Save as rtf/doc/docx
5. File -> Reload:  There is No Gap between note number and endnote text which was present in the original

Actual Results:
No Gap

Expected Results:
A gap, like when created


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5c7b3f5dc1f14081eed380999dc029a500784d55
CPU threads: 8; OS: macOS 14.7.4; UI render: Skia/Metal; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Mike Kaganski 2025-05-18 10:37:30 UTC
Regression after fix for bug 162654.
Related to bug 106062, https://bz.apache.org/ooo/show_bug.cgi?id=24762.

The problem is, that we strip away the tab separating the foot/endnote number and the text, which we output on export. Since the fix for bug 162654, we support (and enable on Word formats import) the compatibility mode that doesn't add automatic spacing between the number and the text; and thus, we shouldn't strip the tab away anymore (we should work exactly like Word in that regard).
Comment 2 Mike Kaganski 2025-05-18 12:06:09 UTC
(In reply to Mike Kaganski from comment #1)
> Regression after fix for bug 162654.

Bug 159382 was meant.
Comment 3 Mike Kaganski 2025-05-18 13:42:21 UTC
https://gerrit.libreoffice.org/c/core/+/185471
Comment 4 Commit Notification 2025-05-18 15:46:21 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a12ac9f4da5efd114c84720834ec11fabd01d0fb

tdf#166620: don't strip leading tab from footnotes/endnotes anymore

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.